syntax = "proto3";

service RouteGuide {
}
