// human.proto
syntax = "proto3";

import "common.proto";

package human;

message Person {
  string last_name = 1;
}

message MakeHumanRes {
  string last_name = 1;
}

service HumanService {
  rpc MakeHuman(Person) returns (MakeHumanRes);
  rpc AddAnimal(common.Animal) returns (common.Animal);
}
