syntax = "proto3";

package one;

import "subdir/two.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  two.Greet greet = 1;
}
