syntax = "proto3";

message TestRequest {
  bool ping = 1;
}

message TestResponse {
  bool pong = 1;
}
